force-app/main/default/objects/Invoice__c/fields/Cancel_Status__c.field-meta.xml
<CustomField>
    <fullName>Cancel_Status__c</fullName>
    <label>Cancel Status</label>
    <length>100</length>
    <type>Text</type>
</CustomField>