force-app/main/default/objects/Invoice__c/fields/Card_Name__c.field-meta.xml
<CustomField>
    <fullName>Card_Name__c</fullName>
    <label>Card Name</label>
    <length>200</length>
    <type>Text</type>
</CustomField>