force-app/main/default/objects/Invoice__c/fields/Delivery_Group__c.field-meta.xml
<CustomField>
    <fullName>Delivery_Group__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Delivery Group</label>
    <referenceTo>Delivery_Group__c</referenceTo>
    <relationshipLabel>Invoices</relationshipLabel>
    <relationshipName>Invoices</relationshipName>
    <type>Lookup</type>
</CustomField>