force-app/main/default/objects/Invoice__c/fields/Doc_Entry__c.field-meta.xml
<CustomField>
    <fullName>Doc_Entry__c</fullName>
    <externalId>true</externalId>
    <label>Doc Entry</label>
    <length>255</length>
    <type>Text</type>
</CustomField>