force-app/main/default/objects/Invoice__c/fields/Doc_Num__c.field-meta.xml
<CustomField>
    <fullName>Doc_Num__c</fullName>
    <label>Doc Num</label>
    <length>150</length>
    <type>Text</type>
</CustomField>