force-app/main/default/objects/Invoice__c/fields/Freight_Charge__c.field-meta.xml
<CustomField>
    <fullName>Freight_Charge__c</fullName>
    <label>Freight Charge</label>
    <precision>16</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>