force-app/main/default/objects/Invoice__c/fields/Invoice_Number__c.field-meta.xml
<CustomField>
    <fullName>Invoice_Number__c</fullName>
    <formula>HYPERLINK(&quot;/&quot; &amp; Id , Name)</formula>
    <label>Invoice Number</label>
    <type>Text</type>
</CustomField>