force-app/main/default/objects/Invoice__c/fields/SaleOrder_Number__c.field-meta.xml
<CustomField>
    <fullName>SaleOrder_Number__c</fullName>
    <label>SaleOrder Number</label>
    <length>200</length>
    <type>Text</type>
</CustomField>