force-app/main/default/objects/Invoice__c/fields/SalesPersonCode__c.field-meta.xml
<CustomField>
    <fullName>SalesPersonCode__c</fullName>
    <label>SalesPersonCode</label>
    <length>100</length>
    <type>Text</type>
</CustomField>