force-app/main/default/objects/Invoice__c/fields/Total_Discount__c.field-meta.xml
<CustomField>
    <fullName>Total_Discount__c</fullName>
    <label>Total Discount</label>
    <precision>17</precision>
    <scale>3</scale>
    <type>Number</type>
</CustomField>