force-app/main/default/objects/Invoice__c/fields/Total_KM__c.field-meta.xml
<CustomField>
    <fullName>Total_KM__c</fullName>
    <description>Total kilometers for invoice</description>
    <label>Total KM</label>
    <precision>16</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>