force-app/main/default/objects/Invoice__c/fields/TransportationMode__c.field-meta.xml
<CustomField>
    <fullName>TransportationMode__c</fullName>
    <label>Transportation Mode</label>
    <length>200</length>
    <type>Text</type>
</CustomField>