force-app/main/default/objects/Invoice__c/fields/Unloading_Charge__c.field-meta.xml
<CustomField>
    <fullName>Unloading_Charge__c</fullName>
    <label>Unloading Charge</label>
    <precision>16</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>