force-app/main/default/objects/Invoice__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>Card_Name__c</columns>
    <columns>NAME</columns>
    <columns>Doc_Entry__c</columns>
    <columns>Invoice_Amount__c</columns>
    <columns>Invoice_Date__c</columns>
    <columns>Delivery_Group__c</columns>
    <columns>Opportunity__c</columns>
    <columns>Payment_Status__c</columns>
    <columns>SaleOrder_Number__c</columns>
    <columns>LAST_UPDATE</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>